frontend/test/should_pass/annot_001.grg
rule r {
	x[prio=10000] : Node;		
	
	modify {
	}
}

