frontend/test/should_fail/ret_017.grg
rule r : (string)
{

    replace {
        x:Node;
        return (x);
    }
}
